--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "typescript": "5.7.2"
     },
     "dependencies": {
+        "framer-motion": "^12.0.11",
         "react-scroll-parallax": "^3.4.5"
     }
 }
