--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
         "typescript": "5.7.2"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.2.0",
         "framer-motion": "^12.0.11",
+        "react-icons": "^5.4.0",
         "react-scroll-parallax": "^3.4.5"
     }
 }
