--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
+        "tailwindcss-intersect": "^2.1.0",
+        "tailwindcss-motion": "^1.1.0",
         "typescript": "5.7.2"
     },
     "dependencies": {
