--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     },
     "devDependencies": {
         "@types/node": "22.10.2",
+        "@types/react": "19.1.13",
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "typescript": "5.7.2"
     },
     "dependencies": {
-        "framer-motion": "^12.4.2"
+        "framer-motion": "^12.4.2",
+        "next": "^15.5.3"
     }
 }
